<resources>
    <string name="app_name">Hike-With-Me-Client</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="route_name">ROUTE_NAME</string>
    <string name="home">Home</string>
    <string name="your_trips">Your Trips</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="community">Community</string>
    <string name="community_list_fragment">Community List Fragment</string>
    <string name="trip_fragment">Trip Fragment</string>
    <string name="trips_list_fragment">Trips List Fragment</string>
    <string name="route_fragment">Route Fragment</string>
    <string name="hometown">Hometown</string>
    <string name="distance">Distance</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="background_image_description">Background_Image_Description</string>
    <string name="start_date_yyyy_mm_dd">Start Date: YYYY-MM-DD</string>
    <string name="end_date_yyyy_mm_dd">End Date: YYYY-MM-DD</string>
    <string name="fab_description">FAB_Description</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_description">Description</string>
    <string name="save_trip">Save Trip</string>
    <string name="trip_start_date">Start Date</string>
    <string name="trip_end_date">End Date</string>
    <string name="trip_user_id">User ID</string>
    <string name="trip_images_urls">Image</string>
    <string name="add_trip">Add Trip</string>
    <string name="recommendation">Recommendation</string>
    <string name="hazard">Hazard</string>
    <string name="selected_routes">Selected Routes</string>
    <string name="add_route">Add Route</string>
    <string name="trip_image">TRIP IMAGE</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log Out</string>
    <string name="add_recommendation">Add Recommendation</string>
    <string name="description">Description</string>
    <string name="route_rate">Route Rate</string>
    <string name="route_length">Route Length</string>
    <string name="length">Length</string>
    <string name="difficulty">Difficulty</string>
    <string name="add">Add</string>
    <string name="routes">Routes</string>
    <string-array name="difficulty_levels">
        <item>Unknown</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>