<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_trip_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trip"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_name"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/trip_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_start_date"
            android:layout_marginTop="16dp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/trip_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_end_date"
            android:layout_marginTop="16dp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/trip_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_description"
            android:layout_marginTop="16dp"
            android:padding="16dp"/>

        <ImageView
            android:id="@+id/tripImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/temporary_img" />

        <Button
            android:id="@+id/save_trip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_trip"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>