<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_name_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/text_description_trip_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"/>

        <TextView
            android:id="@+id/text_description_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_description"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/text_start_date_trip_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Date"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"/>

        <TextView
            android:id="@+id/text_start_date_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_start_date"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/text_end_date_trip_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="End Date"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"/>

        <TextView
            android:id="@+id/text_end_date_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_end_date"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>

        <!-- RecyclerView for Routes -->
        <TextView
            android:id="@+id/text_routes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Routes"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_routes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="26dp"/>

        <ImageView
            android:id="@+id/tripImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/temporary_img" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
